[package]
name = "w"
version = "0.1.0"
authors = ["avrilko <475721797@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "w-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "w-server"
path = "src/bin/server.rs"


[dependencies]
async-stream = "0.2.1"
atoi = "0.3.2"
bytes = "0.6.0"
structopt = "0.3.14"
tokio = { version = "0.3.1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
